# lean_rewrite

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTEBOOK.md  PLAN.md  QUESTIONS.md  README.md  TASKS.md  pyproject.toml
.claude/: settings.local.json
data/: compound_defabbrev_commits.jsonl  pure_defabbrev_commits.jsonl  refactor_commits.jsonl  refactor_commits_post_module.jsonl  simp_eligible_defs.jsonl  tier4_candidates.jsonl
experiments/: writeup.md
experiments/001/: README.md
experiments/001/run1/: report.txt
experiments/001/run2/: candidate.patch  report.txt
experiments/002_tier3_nat_dist_v2/: report.txt
experiments/003_simp_pilot/: README.md  report.txt
experiments/003_simp_pilot/divMaxPow/: report.txt
experiments/003_simp_pilot/succAbove/: report.txt
experiments/004_tier4/Irrational/: report.txt
experiments/004_tier4/sup/: report.txt
experiments/validation/: README.md
experiments/validation_post_module/: README.md
experiments/validation_post_module_v2/: README.md
scripts/: fetch_refactor_commits.py  fetch_refactor_commits_post_module.py  find_compound_defabbrev_commits.py  find_pure_defabbrev_commits.py  find_simp_eligible_defs.py  find_tier4_candidates.py  validate_all_post_module_v2.py  validate_compound_defabbrev.py  validate_pure_defabbrev.py  validate_refactors.py  validate_refactors_post_module.py  validate_t018.py
src/lean_rewrite/: __init__.py  candidates.py  evaluator.py  main.py  runner.py
tests/: test_candidates.py  test_evaluator.py  test_fetch_refactor.py  test_fetch_refactor_post_module.py  test_main.py  test_runner.py
(+28 files in other folders)
